--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
+    <section class="section">
+      <div class="wrapper">
+        <button type="button" data-start>Start</button>
+        <button type="button" data-stop>Stop</button>
+      </div>
+    </section>
 
     <script src="js/01-color-switcher.js" type="module"></script>
   </body>
